# patterns

./: .gitignore  .gitmodules  CMakeLists.txt  Paths.cmake  Patterns.cmake  README.md  Tools.cmake  patterns.h
examples/commandline/: circle.h  configurable.xml  main.cc  main.xml  rectangle.h
examples/dylib/: main.cc
examples/pimpl/: circle.h  main.cc  rectangle.h  shape.h
examples/pimpl-reflect-inheritance/: main.cc  rectangle.h  shape.h
examples/pimpl-reflect-inheritance-init/: circle.h  main.cc  rectangle.h
examples/pimpl-reflect-inheritance-multilevel/: circle.h  main.cc  rectangle.h  regular.h
examples/pimpl-reflect-plugin/: circle.cc  main.cc  rectangle.h  shape.h
examples/reflect/: main  main.cc  rectangle.h  transformed.h
examples/reflect-inheritance/: area.h  main.cc  perimeter.h  rectangle.h
examples/reflect-init/: main.cc  rectangle.h
examples/self-registering-factory/: circle.h  main.cc  rectangle.h  shape.h
examples/self-registering-plugin/: circle.cc  main.cc  rectangle.h  shape.h
examples/visitor/: circle.h  main.cc  rectangle.h  shape.h
examples/visitor-generic/: circle.h  main.cc  rectangle.h  shape.h
examples/visitor-generic-pimpl/: circle.h  main.cc  rectangle.h  shape.h
examples/visitor-pimpl/: circle.h  main.cc  rectangle.h  shape.h
examples/visitor-reflectable/: circle.h  main.cc  rectangle.h
examples/xml-reflect-inheritance/: main.cc  point.h  rectangle.h  shape.h
src/: commandline.h  io.h  layers.h  pimpl.h  rapidxml.h  reflect-inheritance.h  reflect.h  reflectable-visitable.h  self-registering-factory.h  self-registering-reflect.h  type-traits.h  visitor.h  xml.h
tools/dylib-contents/: main.cc
